[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Harsh Bajpai"]
license = "MIT"
description = "A based rollup written from scratch in rust, made for payments with ❤️"

[workspace.dependencies]
alloy = { version = "0.11", features = ["full"] }
bytes = "1"
sha3 = "0.10.8"