[package]
name = "block_builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
alloy = { version = "0.7.0", features = ["full"] }
bytes = "1.5"
sha3 = "0.10"
tx = { path = "../tx" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
