[package]
name = "rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
jsonrpsee = { version = "0.19.0", features = ["server", "jsonrpsee-proc-macros"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
